Atividade React Native - App Fullstack telas login e home

--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-  "name": "dgsmobile",
-  "displayName": "dgsmobile",
+  "name": "fullstack",
+  "displayName": "fullstack",
   "expo": {
-    "name": "dgsmobile",
-    "slug": "dgsmobile",
+    "name": "fullstack",
+    "slug": "fullstack",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
